# AI-Newsletter-GEN

./: .env  README.md  pyproject.toml
app/: agent.py  input_generator.py  mailer.py  main.py
